# xtbclient

./: .gitignore  CMakeLists.txt  ChartLastRequest.cpp  ChartLastRequest.h  Client.cpp  Client.h  README.md  RequestFactory.cpp  RequestFactory.h  ResponseFactory.cpp  ResponseFactory.h  StreamListener.cpp  StreamListener.h  Util.cpp  Util.h
endpoints/: ChartLastRequest.h
enums/: ApiType.h  MarginMode.h  Period.h  Weekdays.h
examples/: CMakeLists.txt  crossing_sma_strategy.cpp  symbol.cpp  tickprices.cpp
record/: BalanceRecord.h  CalendarRecord.h  ChartLastInfoRecord.h  ChartLastRequestRecord.h  ChartRangeInfoRecord.h  CommissionRecord.h  IBRecord.h  MarginLevelRecord.h  MarginTradeRecord.h  NewsRecord.h  ProfitCalculationRecord.h  QuoteRecord.h  RateInfoRecord.h  ServerTimeRecord.h  StepRecord.h  StepRuleRecord.h  StreamBalanceRecord.h  StreamNewsRecord.h  SymbolRecord.h  TickRecord.h  TradeRecord.h  TradeTransactionInfo.h  TradeTransactionStatusRecord.h  TradingHourRecord.h  TradingRecord.h  UserDataRecord.h
src/: Client.cpp  Client.h  RequestFactory.cpp  RequestFactory.h  StreamListener.cpp  StreamListener.h  Util.cpp  Util.h
src/enums/: ApiType.h  MarginMode.h  Period.h  ProfitMode.h  QuoteId.h  RequestStatus.h  Side.h  TransactionCmd.h  TransactionType.h  Weekdays.h
src/record/: CalendarRecord.h  ChartLastInfoRecord.h  ChartLastRequestRecord.h  ChartRangeInfoRecord.h  CommissionRecord.h  IBRecord.h  MarginLevelRecord.h  NewsRecord.h  QuoteRecord.h  RateInfoRecord.h  ServerTimeRecord.h  StepRecord.h  StepRuleRecord.h  StreamBalanceRecord.h  StreamCandleRecord.h  StreamNewsRecord.h  StreamProfitRecord.h  StreamTickRecord.h  StreamTradeRecord.h  StreamTradeStatusRecord.h  SymbolRecord.h  TickRecord.h  TradeRecord.h  TradeTransactionInfo.h  TradeTransactionStatusRecord.h  TradingHourRecord.h  TradingRecord.h  UserDataRecord.h
